--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="js/global.js" defer></script>
-        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/dist/global.css">
         <title>Mozuli</title>
     </head>
     <body>
