--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/global.js" defer></script>
-        <link rel="stylesheet" href="css/dist/global.css">
+        <script src="index.min.js" defer></script>
+        <link rel="stylesheet" href="style.min.css">
     </head>
     <body>
-        <div class="container">
-            <div class="authenticate hidden"></div>
+        <div class="container hidden">
+            <div class="authenticate"></div>
         </div>
     </body>
 </html>
