--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div class="container hidden">
-            <div class="authenticate"></div>
+            <div class="authentication">
+                <div class="log-in"></div>
+                <div class="sign-up hidden"></div>
+            </div>
         </div>
     </body>
 </html>
