update global variables

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+		<meta name="charset" content="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="index.min.js" defer></script>
         <link rel="stylesheet" href="style.min.css">
+        <script src="index.min.js" defer></script>
     </head>
     <body>
         <div class="container hidden">
-            <div class="authentication">
+            <div class="authentication hidden">
                 <div class="log-in"></div>
                 <div class="sign-up hidden"></div>
             </div>
