--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -3,8 +3,8 @@
     <head>
 		<meta name="charset" content="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.min.css">
-        <script src="index.min.js" defer></script>
+        <link rel="stylesheet" href="style.css">
+        <script src="index.js" defer></script>
     </head>
     <body>
         <div class="container hidden">
