--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -7,15 +7,15 @@
         <script src="index.js" type="module" defer></script>
     </head>
     <body>
-        <div class="container hidden">
-            <div class="checking-updates">
+        <div class="container">
+            <div class="update-checker">
                 <img class="loader" src="resources/assets/images/icons/loader.png" alt="Loading Spinner">
-                <span class="message" data-language="update.message"></span>
+                <span class="message"></span>
             </div>
-            <div class="authentication hidden">
+            <!-- <div class="authentication hidden">
                 <div class="log-in"></div>
                 <div class="sign-up hidden"></div>
-            </div>
+            </div> -->
         </div>
     </body>
 </html>
