--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -10,12 +10,12 @@
         <div class="container">
             <div class="update-checker">
                 <img class="loader" src="resources/assets/images/icons/loader.png" alt="Loading Spinner">
-                <span class="message"></span>
+                <span class="message">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</span>
             </div>
-            <!-- <div class="authentication hidden">
+            <div class="authentication hidden">
                 <div class="log-in"></div>
                 <div class="sign-up hidden"></div>
-            </div> -->
+            </div>
         </div>
     </body>
 </html>
