--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -3,8 +3,9 @@
     <head>
 		<meta name="charset" content="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
-        <script src="index.js" type="module" defer></script>
+        <link rel="stylesheet" href="css/global.css">
+        <script src="js/global.js" type="module" defer></script>
+        <script src="js/update_checker.js" defer></script>
     </head>
     <body>
         <div class="container">
